BE/EXST/API: Spostata la configurazione dei survey nel config.json
